crash-20250912-184301-agardr-get_file-fa9d28f4-a0d1-46ca-bcd1-9df81a72786d.txt
Node: tester.get_file
Working directory: /data/sylvester/data1/users/agardr/tester/get_file

Node inputs:

function_str = function=lambda in_file: str(in_file)))

in_file = /data/sylvester/data1/users/agardr/tester/make_design/sub-4000_ses-030321_task-oddball_run-01_desc-b07_events_events-matrix.csv

Traceback (most recent call last):
  File "/data/sylvester/data1/users/agardr/ocean-proc/.venv/lib/python3.10/site-packages/nipype/pipeline/plugins/linear.py", line 45, in run
    node.run(updatehash=updatehash)
  File "/data/sylvester/data1/users/agardr/ocean-proc/.venv/lib/python3.10/site-packages/nipype/pipeline/engine/nodes.py", line 525, in run
    result = self._run_interface(execute=True)
  File "/data/sylvester/data1/users/agardr/ocean-proc/.venv/lib/python3.10/site-packages/nipype/pipeline/engine/nodes.py", line 643, in _run_interface
    return self._run_command(execute)
  File "/data/sylvester/data1/users/agardr/ocean-proc/.venv/lib/python3.10/site-packages/nipype/pipeline/engine/nodes.py", line 769, in _run_command
    raise NodeExecutionError(msg)
nipype.pipeline.engine.nodes.NodeExecutionError: Exception raised while executing Node get_file.

Traceback:
	Traceback (most recent call last):
	  File "/data/sylvester/data1/users/agardr/ocean-proc/.venv/lib/python3.10/site-packages/nipype/utils/functions.py", line 34, in create_function_from_source
	    exec(function_source, ns)
	  File "<string>", line 1
	    function=lambda in_file: str(in_file)))
	                                         ^
	SyntaxError: unmatched ')'

	The above exception was the direct cause of the following exception:

	Traceback (most recent call last):
	  File "/data/sylvester/data1/users/agardr/ocean-proc/.venv/lib/python3.10/site-packages/nipype/interfaces/base/core.py", line 401, in run
	    runtime = self._run_interface(runtime)
	  File "/data/sylvester/data1/users/agardr/ocean-proc/.venv/lib/python3.10/site-packages/nipype/interfaces/utility/wrappers.py", line 129, in _run_interface
	    function_handle = create_function_from_source(
	  File "/data/sylvester/data1/users/agardr/ocean-proc/.venv/lib/python3.10/site-packages/nipype/utils/functions.py", line 44, in create_function_from_source
	    raise RuntimeError(msg) from e
	RuntimeError: Error executing function
	function=lambda in_file: str(in_file)))

	Functions in connection strings have to be standalone. They cannot be declared either interactively or inside another function or inline in the connect string. Any imports should be done inside the function.

